Updated TVTV.de import; Added search pattern manager; Added alternative names for person; Added credit view; Improved schedule view
git-svn-id: svn://kiwinb/dev/media/trunk@401 d2417a56-bda1-9d42-b968-744157609d61